# iam-policy-autopilot

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  RELEASE.md  TELEMETRY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pr-checks.yml  slack_notifications.yml
iam-policy-autopilot-access-denied/src/: types.rs
iam-policy-autopilot-access-denied/src/commands/: apply.rs  plan.rs
iam-policy-autopilot-cli/: Cargo.toml
iam-policy-autopilot-cli/src/: commands.rs  output.rs
iam-policy-autopilot-cli/tests/: integration_tests.rs
iam-policy-autopilot-mcp-server/: Cargo.toml
iam-policy-autopilot-mcp-server/src/: mcp.rs
iam-policy-autopilot-mcp-server/src/tools/: fix_access_denied.rs  generate_policy_for_access_denied.rs  mod.rs
iam-policy-autopilot-mcp-server/tests/: mcp_server_integration_test.rs
iam-policy-autopilot-policy-generation/: Cargo.toml  build.rs
iam-policy-autopilot-policy-generation/resources/config/external-library-models/: aws_lambda_powertools.json
iam-policy-autopilot-policy-generation/src/: lib.rs
iam-policy-autopilot-policy-generation/src/enrichment/: engine.rs  resource_matcher.rs  service_reference.rs
iam-policy-autopilot-policy-generation/src/errors/: mod.rs
iam-policy-autopilot-policy-generation/src/extraction/: engine.rs  mod.rs
iam-policy-autopilot-policy-generation/src/extraction/external_library_models/: mod.rs
iam-policy-autopilot-policy-generation/src/extraction/framework/: extractor_set.rs  language_extractor.rs  mod.rs
iam-policy-autopilot-policy-generation/src/extraction/java/: mod.rs  test_macros.rs  types.rs
iam-policy-autopilot-policy-generation/src/extraction/java/extractors/: import_extractor.rs  method_extractor.rs  paginator_extractor.rs  utility_import_extractor.rs  utils.rs  waiter_extractor.rs
iam-policy-autopilot-policy-generation/src/extraction/java/matchers/: mod.rs  utility.rs
iam-policy-autopilot-policy-generation/src/extraction/javascript/: extractor.rs  scanner.rs  shared.rs  types.rs
iam-policy-autopilot-policy-generation/src/extraction/python/: boto3_resources_model.rs  extractor.rs  library_call_extractor.rs  mod.rs  node_kinds.rs  resource_direct_calls_extractor.rs
iam-policy-autopilot-policy-generation/src/extraction/python/variable_type_tracker/: mod.rs  tests.rs  tracking.rs  types.rs
iam-policy-autopilot-policy-generation/src/lsp/: error.rs  mod.rs  test_utils.rs
iam-policy-autopilot-policy-generation/src/policy_generation/: mod.rs
iam-policy-autopilot-policy-generation/tests/: lsp_integration_tests.rs  native_cert_store_test.rs  python_chained_subresource_action_test.rs
integration-tests/projects/run_001/go/: go.mod
integration-tests/projects/run_002/go/: go.mod  go.sum
integration-tests/projects/run_003/go/: go.mod  go.sum
integration-tests/projects/run_004/go/: go.mod
integration-tests/projects/run_005/go/: go.mod
integration-tests/projects/run_006/go/: go.mod  go.sum
integration-tests/projects/run_007/go/: go.mod  go.sum
integration-tests/projects/run_008/go/: go.mod  go.sum
integration-tests/projects/run_009/go/: go.mod  go.sum
integration-tests/projects/run_010/go/: go.mod  go.sum
power-iam-policy-autopilot/: POWER.md
