[build-system]
requires = ["maturin>=1.10.2,<2.0"]
build-backend = "maturin"

# Standard Python package metadata
[project]
name = "iam-policy-autopilot" # The name it will have on PyPI
version = "0.2.2"
description = "An open source Model Context Protocol (MCP) server and command-line tool that helps your AI coding assistants quickly create baseline IAM policies that you can refine as your application evolves, so you can build faster. IAM Policy Autopilot analyzes your application code locally to generate identity-based policies for application roles, enabling faster IAM policy creation and reducing access troubleshooting time. IAM Policy Autopilot supports applications built in Python, Go, TypeScript, and Java."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["rust", "IAM Policy", "AWS"]

[tool.maturin]
manifest-path = "iam-policy-autopilot-cli/Cargo.toml"
bindings = "bin"

[tool.ruff]
# Only lint our own scripts — exclude git submodules, generated output, and
# test fixture .py files (these are sample inputs for the Rust extractor tests,
# not maintained Python code).
exclude = [
    "iam-policy-autopilot-policy-generation/resources/config/sdks",
    "iam-policy-autopilot-policy-generation/tests/resources",
    "iam-policy-autopilot-cli/tests/resources",
    "iam-policy-autopilot-mcp-server/tests/test_data",
    "integration-tests/projects",
    "target",
]

target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E4",  # pycodestyle errors
    "E7",  # pycodestyle errors
    "E9",  # pycodestyle errors (syntax errors — catches Python version issues at parse time)
    "F",   # Pyflakes (undefined names, unused imports, etc.)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modernise syntax, flags redundant constructs)
    "G",   # flake8-logging-format
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
