[package]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
name = "iam-policy-autopilot-mcp-server"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
log.workspace = true
anyhow.workspace = true
clap.workspace = true
tempfile.workspace = true
chrono.workspace = true
schemars.workspace = true
env_logger.workspace = true
tokio.workspace = true

axum = "^0.8"
rmcp = { version = "^1.6" , features = [
    "server",
    "macros",
    "client",
    "transport-io",
    "transport-streamable-http-server",
    "auth",
    "elicitation",
    "schemars",
]}

iam-policy-autopilot-common = { path = "../iam-policy-autopilot-common" }
iam-policy-autopilot-policy-generation = { path = "../iam-policy-autopilot-policy-generation" }
iam-policy-autopilot-access-denied = { path = "../iam-policy-autopilot-access-denied" }

[dev-dependencies]
iam-policy-autopilot-policy-generation = { path = "../iam-policy-autopilot-policy-generation" , features=["integ-test"] }
iam-policy-autopilot-common = { path = "../iam-policy-autopilot-common" }
serial_test.workspace = true
reqwest.workspace = true
rstest.workspace = true
rmcp = { version = "^1.6" , features = [
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
]}
tokio = {version = "^1", features = ["full"]}

[lints]
workspace = true
