[package]
name = "iam-policy-autopilot-policy-generation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for IAM permission analysis and AWS SDK method extraction"

[package.metadata.cargo-machete]
ignored = ["hcl-rs"]

[lib]
crate-type = ["cdylib", "rlib"]

# Universal dependencies (all compilation targets)
[dependencies]
iam-policy-autopilot-common = { path = "../iam-policy-autopilot-common" }
serde.workspace = true
thiserror.workspace = true
log.workspace = true
regex.workspace = true
ast-grep-config.workspace = true
ast-grep-core.workspace = true
ast-grep-language.workspace = true
anyhow.workspace = true
convert_case.workspace = true
reqwest.workspace = true
rust-embed.workspace = true
schemars.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
strsim.workspace = true
derive-new.workspace = true
hcl-rs.workspace = true
walkdir.workspace = true

# Build dependencies
[build-dependencies]
serde.workspace = true
regex.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true
tokio-util.workspace = true

# JSON processing
serde_json.workspace = true

aws-lc-rs.workspace = true
git2.workspace = true
relative-path.workspace = true
convert_case.workspace = true

[features]
default = []
integ-test = []
# Development features
dev = ["tokio/test-util"]

# Development dependencies
[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
criterion.workspace = true
proptest.workspace = true
rstest.workspace = true
paste.workspace = true
test-log = "0.2"
env_logger.workspace = true
wiremock = "0.6"
assert_cmd.workspace = true
# TLS integration test: verifies the HTTP client respects the OS certificate store
# (corporate CAs trusted via SSL_CERT_FILE) when connecting to the service reference endpoint
rcgen = "0.14"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pki-types = "1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
pem = "3"
iam-policy-autopilot-policy-generation = { path = ".", features = ["integ-test"]}

# Documentation configuration
[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true